# buechsentelefon

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
assets/: index.html
assets/css/: layout.css  style.css
assets/js/: api.js  app.js  constants.js  i18n.js  rtc.js
src/: args.rs  config.rs  main.rs  server.rs
src/web/: mod.rs  ws.rs
